2005-11-16  Yves Combe  <yves@ycombe.net>

	add uppercase only configuration option in gletter.

	* src/boards/gletters.c: (load_default_charset), (start_board),
	(key_press), (gletter_config_start):

2005-11-15  Yves Combe  <yves@ycombe.net>

	Fix segfaults in python callback and memory.
        Cause is sound finished after board quit.

	* src/boards/memory.c: (end_board), (memory_next_level),
	(start_callback):
	* src/boards/py-mod-sound.c: (pyGcomprisSoundCallback):

2005-11-14  Bruno coudoin  <bruno.coudoin@free.fr>

	Created the gtans icon based on an www.openclipart.org design reviewed by
	Bruno Coudoin and placed under GPL.

	* boards/boardicons/gtans.png:
	* boards/gtans.xml.in:
	* src/gcompris/timer.c: (gcompris_timer_pause): removed printout.

2005-11-14  Yves Combe,,,  <yves@ycombe.net>

	clean tangram code from debug.
	add rotation buttons in tangram.

	* src/boards/gtans.c: (start_board), (tanspinsetvalmax),
	(tandrawselect), (tanredrawpetite), (tanloadfigtab),
	(tansetnewfigurepart2), (taninitstart):
	* src/boards/gtans_callbacks.c:
	(on_wdrawareapetite_configure_event), (on_rotation_clicked):
	* src/boards/gtans_callbacks.h:
	* src/boards/gtans_interface.c: (create_mainwindow):

2005-11-14  Bruno coudoin  <bruno.coudoin@free.fr>

	Improved gtans (a little bit.) 
	Added the board description, added it for translation.
	Created a temporary background until we have someting better.
	
	* boards/gtans.xml.in:
	* boards/images/gtans_bg.png:
	* boards/images/mosaic_palette.png:
	* po/POTFILES.in:
	* src/boards/gtans.c: (start_board):
	* src/boards/gtans_interface.c: (create_mainwindow):
	* src/boards/gtans_support.c: (create_pixmap):
	* src/boards/python/mosaic.py: added a checked image over the selected color.

2005-11-13  Bruno coudoin  <bruno.coudoin@free.fr>

	- Graphically enhanced the mosaic activity.

	* boards/images/mosaic_bg.png:
	* boards/images/mosaic_palette.png:
	* src/boards/python/mosaic.py: