@@ -1,3 +1,10 @@
+2005-11-17  Yves Combe  <yves@ycombe.net>
+
+	Fix xml i18n bug.
+
+	* src/gcompris/gameutil.c: (reactivate_newline),
+	(gcompris_add_xml_to_data):
+
 2005-11-16  Yves Combe  <yves@ycombe.net>
 
 	add uppercase only configuration option in gletter.
